# PINRemoteImage

./: .buckconfig  .gitattributes  .github_changelog_generator  .gitignore  .travis.yml  ANIMATEDIMAGE.md  BUILD.bazel  CHANGELOG.md  Cartfile  Cartfile.resolved  LICENSE  Makefile  PINRemoteImage.podspec  Package.swift  Podfile  README.md  RELEASE.md  WORKSPACE  build.sh  build_docs.sh  carthage.sh  run_tests_update_status.sh
.buildkite/: pipeline.yml
.github/workflows/: ci.yaml  ci.yml  ci_push.yml  publish_release.yml
CI/: build.sh  exclude-from-build.json
Carthage/Checkouts/libwebp/: .gitignore  .mailmap  AUTHORS  Android.mk  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.vc  NEWS  README  README.mux  build.gradle  configure.ac  makefile.unix
Carthage/Checkouts/libwebp/cmake/: config.h.cmake  config.h.in  cpu.cmake
Carthage/Checkouts/libwebp/examples/: Android.mk  Makefile.am  anim_diff.c  anim_util.c  anim_util.h  cwebp.c  dwebp.c  example_util.c  example_util.h  gif2webp.c  gifdec.c  image_dec.c  image_dec.h  img2webp.c  jpegdec.c  jpegdec.h  pngdec.c  pngdec.h  tiffdec.c  tiffdec.h  vwebp.c  webpdec.c  webpdec.h  webpmux.c  wicdec.c  wicdec.h
Carthage/Checkouts/libwebp/extras/: Makefile.am  extras.c  extras.h  get_disto.c  quality_estimate.c  webp_quality.c
Carthage/Checkouts/libwebp/imageio/: Android.mk  Makefile.am  image_dec.c  image_dec.h  image_enc.c  imageio_util.c  imageio_util.h  jpegdec.c  pngdec.c  tiffdec.c  webpdec.c  webpdec.h  wicdec.c
Carthage/Checkouts/libwebp/man/: cwebp.1  gif2webp.1  img2webp.1  vwebp.1  webpmux.1
Carthage/Checkouts/libwebp/src/: Makefile.am  libwebp.rc  libwebpdecoder.rc
Carthage/Checkouts/libwebp/src/demux/: Makefile.am
Carthage/Checkouts/libwebp/src/dsp/: Makefile.am
Carthage/Checkouts/libwebp/src/mux/: Makefile.am
Carthage/Checkouts/libwebp/src/utils/: Makefile.am
Example/: Podfile
Example-Mac/: Podfile
Example-Mac/PINRemoteImage/: AppDelegate.h  AppDelegate.m  DegradedViewController.h  DegradedViewController.m  Info.plist  PINViewWithBackgroundColor.m  ProcessingViewController.m  ProgressiveViewController.h  ProgressiveViewController.m  ScrollViewController.h  ScrollViewController.m  WebPViewController.m  WebPViewController.xib
Example-Mac/PINRemoteImage.xcodeproj/: project.pbxproj
Example-Mac/PINRemoteImageTests/: PINRemoteImageTests.m
Example-Shared/: Kitten.h  Kitten.m
Example-tvOS/: Podfile
Example-tvOS/PINRemoteImage.tvOSExample/: CollectionViewController.swift  DegradedViewController.swift  GIFViewController.swift  Info.plist  ProcessingViewController.swift  ProgressiveViewController.swift  WebPViewController.swift
Example-tvOS/PINRemoteImage.tvOSExample.xcodeproj/: project.pbxproj
Example-tvOS/PINRemoteImage.tvOSExample.xcworkspace/: contents.xcworkspacedata
Example/PINRemoteImage/: DegradedViewController.h  DegradedViewController.m  Launch Screen.storyboard  PINAppDelegate.m  PINRemoteImage-Info.plist  PINViewController.m  ProcessingViewController.m  ProgressiveViewController.h  ProgressiveViewController.m  WebPViewController.h  WebPViewController.m
Example/PINRemoteImage Tests/: Info.plist  PINProgressiveImage+Accelerate.h  PINProgressiveImage+Accelerate.m  PINRemoteImage_Tests.m
Example/PINRemoteImage.xcodeproj/: project.pbxproj
Examples/Example/: Podfile
Examples/Example-Mac/: Podfile
Examples/Example-Shared/: Kitten.h  Kitten.m
Examples/Example-tvOS/: Podfile
Examples/Swift-Example/: Podfile
PINRemoteImage.xcodeproj/: project.pbxproj
PINRemoteImage.xcworkspace/: contents.xcworkspacedata
PINRemoteImage/PINRemoteImage/: PINRemoteImage-Prefix.pch  module.modulemap
PINRemoteImage/PINRemoteImage.xcodeproj/: project.pbxproj
PINRemoteImage/PINRemoteImageTests/: PINRemoteImageTests.m
Pod/Classes/: PINAlternateRepresentationDelegate.h  PINAlternateRepresentationDelegate.m  PINAnimatedImage.h  PINAnimatedImage.m  PINAnimatedImageManager.h  PINAnimatedImageManager.m  PINDataTaskOperation.h  PINDataTaskOperation.m  PINProgressiveImage.h  PINProgressiveImage.m  PINRemoteImage.h  PINRemoteImageBasicCache.m  PINRemoteImageCaching.h  PINRemoteImageCallbacks.h  PINRemoteImageCategoryManager.h  PINRemoteImageCategoryManager.m  PINRemoteImageDownloadTask.h  PINRemoteImageDownloadTask.m  PINRemoteImageMacros.h  PINRemoteImageManager.h  PINRemoteImageManager.m  PINRemoteImageManagerResult.h  PINRemoteImageManagerResult.m  PINRemoteImageMemoryContainer.h  PINRemoteImageProcessorTask.h  PINRemoteImageProcessorTask.m  PINRemoteImageTask.h  PINRemoteImageTask.m  PINRemoteLock.h  PINRequestRetryStrategy.h  PINRequestRetryStrategy.m  PINURLSessionManager.h  PINURLSessionManager.m
Scripts/: release.sh  tag-release-branch.sh
Source/: PINRemoteImage.modulemap  PrivacyInfo.xcprivacy
Source/Classes/: NSHTTPURLResponse+MaxAge.h  PINAlternateRepresentationProvider.m  PINAnimatedImage.h  PINAnimatedImage.m  PINAnimatedImageView+PINRemoteImage.m  PINAnimatedImageView.m  PINCache+PINRemoteImageCaching.h  PINCache+PINRemoteImageCaching.m  PINCachedAnimatedImage.m  PINDisplayLink.h  PINDisplayLink.m  PINGIFAnimatedImage.m  PINGIFAnimatedImageManager.h  PINGIFAnimatedImageManager.m  PINImage+DecodedImage.h  PINImage+ScaledImage.h  PINImage+WebP.m  PINProgressiveImage.h  PINProgressiveImage.m  PINRemoteImage.h  PINRemoteImageBasicCache.h  PINRemoteImageBasicCache.m  PINRemoteImageCaching.h  PINRemoteImageCallbacks.h  PINRemoteImageCallbacks.m  PINRemoteImageCategoryManager.h  PINRemoteImageCategoryManager.m  PINRemoteImageDownloadQueue.h  PINRemoteImageDownloadQueue.m  PINRemoteImageDownloadTask.h  PINRemoteImageDownloadTask.m  PINRemoteImageMacros.h  PINRemoteImageManager+Private.h  PINRemoteImageManager.h  PINRemoteImageManager.m  (+25 more)
Tests/: NSDate+PINCacheTests.h  NSString+MD5Tests.swift  PINAnimatedImage+PINAnimatedImageTesting.h  PINAnimatedImage+PINAnimatedImageTesting.m  PINAnimatedImageTests.swift  PINRemoteImageManagerTests.m  PINRemoteImageTests-Bridging-Header.h  PINRemoteImageTests.m  TestAnimatedImage.h  TestAnimatedImage.m
webp/: Makefile  config.status  libtool
(+610 files in other folders)
